--- a/LuckySevenGame.html
+++ b/LuckySevenGame.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<body>
-    <div style="width: fit-content; margin: auto; margin-top: 5%; border-style: solid;padding: 20px;">
-        <input type="text" id="I1" style="width: 50px; aspect-ratio: 1/1; font-size: 18px;">
-        <input type="text" id="I2" style="width: 50px; aspect-ratio: 1/1; font-size: 18px;">
-        <input type="text" id="I3" style="width: 50px; aspect-ratio: 1/1; font-size: 18px;">
+<body style="background-color: aqua;">
+
+    <div style="width: fit-content; margin: auto; margin-top: 5%; border-style: solid; padding: 20px; color: rebeccapurple">
+        <input type="text" id="I1" style="width: 50px; aspect-ratio: 1/1; font-size: 18px; text-align: center;">
+        <input type="text" id="I2" style="width: 50px; aspect-ratio: 1/1; font-size: 18px; text-align: center;">
+        <input type="text" id="I3" style="width: 50px; aspect-ratio: 1/1; font-size: 18px; text-align: center;">
         <br>
-        <input id="btn" type="button" value="sprint" style="margin-left: 63px; margin-top: 20px;">
+        <input id="btn" type="button" value="sprint" style="margin-left: 63px; margin-top: 20px; font-size: large; 
+            background-color: greenyellow; color: brown;">
         
     </div>
 
